fixed contrast issue

--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
   text-align: center;
   margin-top: 5%;
   margin-bottom: 30px;
-  background-image: linear-gradient(45deg, rgb(27, 17, 13), rgb(228, 129, 42));
+  background-image: linear-gradient(45deg, rgb(7, 2, 0), rgb(193, 91, 2));
   background-clip: text;
   -webkit-background-clip: text;
   color: transparent;
